# tik-tak-toe

./: CMakeLists.txt  README.md
scripts/: build.bat  flush.bat  run.bat
source/: main.cpp
